First working version of the LFC 2020 MAPC.